Lazy Programmer: Authentication via Filter, Sonar Issue Fixes